# krill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  krill.cabal
.github/workflows/: ci.yml
app/: Main.hs
docs/: ARCHITECTURE.md  MILESTONES.md
examples/: basic.krill.yaml  build-pipeline.krill.yaml  deploy-with-gates.krill.yaml  env.krill.json  env.krill.yaml  http.krill.yaml  interpolation.krill.yaml  outreach-send.krill.yaml
src/Krill/: Parse.hs  Run.hs  Types.hs
test/: ParseSpec.hs  RunSpec.hs  Spec.hs
test/Test/: Hspec.hs
