cabal-version:      3.0
name:               krill
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Alex Melges
maintainer:         alexmelges@gmail.com
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md
    docs/ARCHITECTURE.md
    docs/MILESTONES.md
extra-source-files:
    examples/basic.krill.yaml

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    default-language: GHC2021

library
    import: warnings
    hs-source-dirs:   src
    exposed-modules:
        Krill.Types
        Krill.Parse
        Krill.Run
    build-depends:
        base >=4.22 && <5,
        bytestring >=0.12 && <0.13,
        directory >=1.3 && <1.4,
        filepath >=1.5 && <1.6,
        parsec >=3.1 && <3.2,
        process >=1.6 && <1.7,
        text >=2.1 && <2.2,
        time >=1.15 && <1.16

executable krill
    import: warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base >=4.22 && <5,
        krill,
        text >=2.1 && <2.2
    default-language: GHC2021

test-suite krill-test
    import: warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        ParseSpec
        RunSpec
        Test.Hspec
    build-depends:
        base >=4.22 && <5,
        bytestring >=0.12 && <0.13,
        directory >=1.3 && <1.4,
        filepath >=1.5 && <1.6,
        krill,
        text >=2.1 && <2.2,
        time >=1.15 && <1.16
    default-language: GHC2021
